--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -35,6 +35,6 @@
     <integer name="config_deviceHardwareKeys">32</integer>
 
     <!-- Device supports LED flashlight -->
-    <bool name="config_enableTorch">true</bool>
+    <add-resource type="bool" name="config_enableTorch">true</add-resource>
 
 </resources>
