add support for mass storage usb modes & allow /sdcard1 to be mounted as a mass storage volume

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -45,6 +45,7 @@
     <!-- external sd card -->
     <storage android:mountPoint="/storage/sdcard1"
              android:storageDescription="@string/storage_sd_card"
+             android:allowMassStorage="true"
              android:primary="false"
              android:removable="true" />
 
